Increase opacity to meet color contrast ratio, fixes #52684

--- a/src/vs/workbench/browser/parts/notifications/media/notificationsList.css
+++ b/src/vs/workbench/browser/parts/notifications/media/notificationsList.css
@@ -115,7 +115,6 @@
 /** Notification: Source */
 
 .monaco-workbench .notifications-list-container .notification-list-item .notification-list-item-source {
-	opacity: 0.7;
 	flex: 1;
 	font-size: 12px;
 	overflow: hidden; /* always give away space to buttons container */
